vipr-portal/portal/public/stylesheets/workflowbuilder.less
.exampleEditor {
    background-color: #eee !important;
    //height: calc(100vh-50px);
    position: absolute;
    bottom: 8px;
    right: 8px;
    left: 88px;
    top: 159px;
    max-width: 100vw;
    border: 1px solid rgb(192, 192, 192);
}

.homeTab{
    background-color: #fcfcfc;
    height:100vh;
    text-align: center;
    padding-top: 300px;
    font-size: 30px;
    color: #efeded;
}

.newEditor {
    height:80vh;

}
.success-icon {
    color:#5cb85c;
}
.warning-icon {
    color:#f0ad4e;
}

.jsPlumb_dragged {
    z-index: 999;
}
.jsPlumb-container {
    width:4000px;
    height:4000px;
    position:relative;
    background-image: url("/public/img/grid.png");
	background-color: #f7f7f7;
}
.example-item-card-wrapper {
    position:absolute;
    z-index:200;
}

.example-item-card-wrapper a {
    text-decoration: none;
}

.item {
    margin-top: 2px;
    margin-bottom: 0;
    padding-top:10px;
    background-color: white;
    border-color: #357ebd;
    border-radius: 3px;
    pointer-events:none;
    border: 2px solid grey;
    height: 75px;
    width: 175px;
    text-overflow: ellipsis;
    word-wrap: break-word;
	
}

.item-start-end {
    height:40px;
    width:70px;
    border: 2px solid #428bca;
    border-radius:50%;
    background-color: #428bca;
}

.sidebar {
    background-color: white !important;
    z-index:999 !important;
    width: 100%;
    height: 100%;
}

.home-sidebar {
    background-color: white !important;
    z-index:999 !important;
    width: 100%;
    height: 90vh;
}

.buttonbar {
    margin: 10px;
    float: right;
}

.passEndpoint svg circle {
     fill: #5cb85c;
     border-color: #4cae4c;
 }

.failEndpoint svg circle {
    fill: #d9534f;
    border-color: #d43f3a;
}

.jsplumb-endpoint.jsplumb-endpoint-connected {
    opacity: 1;
}

.jsplumb-connector {
    z-index: 4;
}

.jsplumb-endpoint {
    z-index: 5;
    //opacity: 0.2;
    stroke: none;
}

.itemText {
    color: black;
    font-size: 13px;
    pointer-events:none;
    float: left;
    width: inherit;
    padding: 5px;
}

.itemTextStartEnd {
    color: white;
    text-align: center;
    margin: 10px;
    font-size: 15px;

}

.draggable-card {
    display: inline-block;
    z-index: 100;
}

.draggable-card .itemText {
    font-size: 16px;
}

.builder-column {
    width: auto;
    overflow: hidden;
}

.button-step-close {
    margin: 5px;
    color: black;
}

.button-container {
    position: absolute;
    right: 0px;
}

.highlighted {
    border: 2px solid #67bbe0;
	background-color: #beebff;
}

table, th , td {
  padding: 5px;
}

.sidenav-panel {
    overflow:scroll;
}

.sidenav {
    height: 100%; /* 100% Full-height */
    width: 0; /* 0 width - change this with JavaScript */
    position: absolute; /* Stay in place */
    z-index: 2; /* Stay on top */
    right: 6px;
    background-color: #eee; /* Black*/
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 20px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
    border: 1px solid rgb(192, 192, 192);
}

.sidenav-open {
    width: 600px;
    padding-left: 20px;
    padding-right: 20px;
}

.sidenav a:hover, .offcanvas a:focus{
    color: #414141;
    text-decoration: none;
     cursor: pointer;
     cursor: hand;
}

.sidenav .closebtn {
    position: absolute;
    top: 5px;
    right: 5px;
    font-size: 36px;
    margin-left: 50px;
}

.lib-slider-button {
    padding: 1px;
    height: 100vh;
    position: absolute;
    z-index: 1; /* Stay on top */
    transition: margin-right .5s;
    margin-right: 0px;
}

.slider-open {
    margin-right: 600px;
}

#sliderMenu {
    width: 54px;
    height: 100%;
    position: absolute;
    right: 0;
    background-color: white;
    border: 1px solid rgb(192, 192, 192);
    z-index: 2;
}

.side-container {
    float: right;
    position: absolute;
    right: 8px;
    bottom: 8px;
    top: 105px;

    z-index: 1;
}

.builder-container {
    clear: both;
}

#libSidebar {
  /* for the animation */
  transition: margin 0.8s ease;
}

.collapsed {
  /* hide it for small displays*/
  display: none;
}

@media (min-width: 992px) {
  .collapsed {
    display: block;
    /* same width as sidebar */
    margin-left: -33.334%;
  }
}

#row-main {
  /* necessary to hide collapsed sidebar */
  overflow-x: hidden;
}

#builderController {
  /* for the animation */
  transition: width 0.8s ease;
}

#inputDiv .col-sm-3,
#inputDiv .col-sm-9,
#inputDiv .col-sm-12{
   padding-right: 0 !important;
   padding-left: 0 !important;
}

#inputDiv .form-group {
   margin-bottom: 0 !important;
}

